Wed Sep 15 07:35:47 2021  Rob Lauer  <rlauer6@comcast.net>

	[remove is-core.pl]:
	* utils/find-perl-requires.sh
	- put code from is-core.pl in-line
	- use getopts to add options -d, -h, -r, -e
	- write files to check to temp file
	- DEBUG=1, not $1
	- look for 'package {module}' in files to check file to determine local modules
	* utils/perl-deps.sh: likewise
	* Makefile.perl-req
	- call find-perl-requires.sh with new args
	- add test for DEBUG
	* utils/is-core.pl
	- removed, added code to utils/find-perl-require.sh
	* Makefile.am: remove is-core.pl
	* init.sh: add DEBUG arg

Tue Sep 14 11:32:16 2021  Rob Lauer  <rlauer6@comcast.net>

	* resources/Makefile.am: dist_resources_DATA
	* autoconf-template-perl.spec.in: /* for resources
	* includes/directories.inc: resourcedir $(datadir)/resources/@PACKAGE@

Tue Sep 14 10:46:50 2021  Rob Lauer  <rlauer6@comcast.net>

	* includes/directories.inc: whitespace
	* includes/perl-build.inc
	- +BUILD_PERL_MODULE_RULE
	- +BUILD_PERL_RULE
	* includes/perl-modules.inc: generated sample
	* includes/perl-deps.yaml: likewise

Tue Sep 14 09:00:59 2021  Rob Lauer  <rlauer6@comcast.net>

	* utils/find-perl-requires.sh
	- add .cgi.in files for requirements check

Mon Sep 13 13:08:15 2021  Rob Lauer  <rlauer6@comcast.net>

	* configure.ac
	- added LICENSE, ARCHITECTURE output
	- ["GNU Public License"] not [GNU Public License]
	* bootstrap
	- back automake version requirement into bootstrap script
	- remove Perl dependency file creation (move to init.sh)
	* init.sh: new
	- create Perl dependency files
	- check for required Perl modules
	- check for required utilities (cpanm, perl.req, automake)
	* .gitignore: added *.spec
	* Makefile.perl-req
	- mode
	- silence output of make
	- added cpan target for local installation of files
	* utils/find-perl-requires.sh
	- remove helpful messsage (only for RHEL)
	* is-core.pl: /usr/bin/env, not /bin/env
	* utils/perl-deps.pl
	- likewise
	- %{$dirs}, not $dirs
	- $(BUILD_PERL_MODULE_RULE) not include